--- a/App/src/App.css
+++ b/App/src/App.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
 }
 body {
+  padding-top: 4rem;
   margin: -0px;
   color: #333;
   --type-first: Helvetica, Arial, sans-serif;
@@ -37,9 +38,12 @@ input {
   color: #333;
 }
 
-.container {
-    max-width: 50rem;
-    padding: 0 1rem;
-    margin: 0 auto;
+a {
+  text-decoration: none;
+}
 
+.container {
+  max-width: 50rem;
+  padding: 0 1rem;
+  margin: 0 auto;
 }
