--- a/src/Components/Photo/PhotoComments.module.css
+++ b/src/Components/Photo/PhotoComments.module.css
@@ -1,12 +1,14 @@
 .comments {
-    display: grid;
-    overflow-y: auto;
-    word-break: break-word;
-    padding: 0.2rem;
-
+  display: grid;
+  overflow-y: auto;
+  word-break: break-word;
+  padding: 0.2rem;
+}
+.single.comments {
+  padding: 0px;
 }
 
 .comments li {
-    margin-bottom: 0.5rem;
-    line-height: 1.2;
+  margin-bottom: 0.5rem;
+  line-height: 1.2;
 }
